--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build": "node esbuild.config.mjs production",
         "prod": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
         "version": "node version-bump.mjs && git add manifest.json versions.json",
-        "lint": "prettier --check src/**/*.ts*",
-        "fix-lint": "prettier --write src/**/*.ts*",
+        "lint": "prettier --config .prettierrc.prettierrc.json --check src/**/*.ts*",
+        "fix-lint": "prettier --config .prettierrc.json --write src/**/*.ts*",
         "compile": "tsc -noEmit --skipLibCheck",
         "prepare": "husky install",
         "test": "jest --ci --silent=true",
