--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "obsidian-full-calendar",
-	"name": "Full Calendar",
+	"id": "full-calendar-remastered",
+	"name": "Full Calendar Remastered",
 	"version": "0.11.3",
 	"minAppVersion": "0.16.3",
-	"description": "Obsidian integration with Full Calendar (fullcalendar.io)",
-	"author": "Davis Haupt",
-	"authorUrl": "https://davi.sh",
-	"isDesktopOnly": false,
-	"fundingUrl": "https://ko-fi.com/davish"
+	"description": "Remastered version Full Calendar for your daily calender needs, and beyond.",
+	"author": "Jovi Koikkara",
+	"repo": "https://github.com/YouFoundJK/plugin-full-calendar",
+	"isDesktopOnly": false
 }
