--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "compile": "tsc -noEmit --skipLibCheck",
         "prepare": "husky install",
         "test": "jest --ci --silent=true",
+        "test-update": "jest --silent=false --updateSnapshot",
         "test-dev": "jest --watch",
         "coverage": "jest --coverage"
     },
