--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,5 @@
 	"description": "Remastered version Full Calendar for your daily calender needs, and beyond.",
 	"author": "Jovi Koikkara",
 	"authorUrl": "https://github.com/YouFoundJK",
-	"isDesktopOnly": false
+	"isDesktopOnly": true
 }
