--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
         "react": "^19.1.0",
         "react-dom": "^19.1.0",
         "rrule": "^2.8.1",
+        "tsdav": "^2.1.5",
         "zod": "^3.25.76"
     }
 }
