--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "obsidian-full-calendar",
-    "version": "0.11.8",
+    "name": "full-calendar-remasteredr",
+    "version": "0.12.0",
     "description": "Obsidian integration with Full Calendar (fullcalendar.io)",
     "main": "main.js",
     "scripts": {
