--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
         "husky": "^9.1.7",
         "jest": "^30.0.4",
         "jest-environment-jsdom": "^30.2.0",
+        "jest-mock-extended": "^4.0.0",
         "obsidian": "^1.8.7",
         "prettier": "^3.6.2",
         "ts-jest": "^29.4.0",
