--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     },
     "keywords": [],
     "author": {
-        "name": "Davis Haupt",
+        "name": "Jovi Koikkara | Davis Haupt",
         "email": "contact@davishaupt.com",
         "url": "https://davi.sh"
     },
@@ -30,9 +30,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.3",
         "@eslint/js": "^9.39.2",
-        "@types/co": "^4.6.6",
         "@types/color": "^4.2.0",
-        "@types/dav": "^1.7.7",
         "@types/flatpickr": "^3.0.2",
         "@types/jest": "^30.0.0",
         "@types/js-yaml": "^4.0.9",
@@ -90,5 +88,12 @@
         "rrule": "^2.8.1",
         "tsdav": "^2.1.5",
         "zod": "^3.25.76"
+    },
+    "overrides": {
+        "minimatch": "^10.2.1",
+        "react-inspector": {
+            "react": "$react",
+            "react-dom": "$react-dom"
+        }
     }
 }
