--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "@fullcalendar/icalendar": "^6.1.18",
         "@fullcalendar/interaction": "^6.1.18",
         "@fullcalendar/list": "^6.1.18",
+        "@fullcalendar/luxon3": "^6.1.20",
         "@fullcalendar/resource-timeline": "^6.1.18",
         "@fullcalendar/rrule": "^6.1.18",
         "@fullcalendar/timegrid": "^6.1.18",
