--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "full-calendar-remasteredr",
-    "version": "0.12.6.2",
+    "version": "0.12.6",
     "description": "Obsidian integration with Full Calendar (fullcalendar.io)",
     "main": "main.js",
     "scripts": {
@@ -10,8 +10,8 @@
         "prod": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
         "version": "node version-bump.mjs && git add manifest.json versions.json",
         "lint": "prettier --config .prettierrc.json --check src/**/*.ts*",
-        "lint:eslint": "eslint src test_helpers vendor -o lint_report.txt --no-color",
-        "lt-es": "eslint src test_helpers vendor -o lint_report.txt --no-color",
+        "lint:eslint": "eslint src -o lint_report.txt --no-color",
+        "lt-es": "eslint src -o lint_report.txt --no-color",
         "fl": "prettier --config .prettierrc.json --write src/**/*.ts*",
         "compile": "tsc -noEmit --skipLibCheck",
         "prepare": "husky install",
@@ -22,7 +22,7 @@
     },
     "keywords": [],
     "author": {
-        "name": "Davis Haupt",
+        "name": "Jovi Koikkara | Davis Haupt",
         "email": "contact@davishaupt.com",
         "url": "https://davi.sh"
     },
@@ -30,9 +30,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3.3.3",
         "@eslint/js": "^9.39.2",
-        "@types/co": "^4.6.6",
         "@types/color": "^4.2.0",
-        "@types/dav": "^1.7.7",
         "@types/flatpickr": "^3.0.2",
         "@types/jest": "^30.0.0",
         "@types/js-yaml": "^4.0.9",
@@ -52,6 +50,7 @@
         "husky": "^9.1.7",
         "jest": "^30.0.4",
         "jest-environment-jsdom": "^30.2.0",
+        "jest-mock-extended": "^4.0.0",
         "obsidian": "^1.8.7",
         "prettier": "^3.6.2",
         "ts-jest": "^29.4.0",
@@ -66,6 +65,7 @@
         "@fullcalendar/icalendar": "^6.1.18",
         "@fullcalendar/interaction": "^6.1.18",
         "@fullcalendar/list": "^6.1.18",
+        "@fullcalendar/luxon3": "^6.1.20",
         "@fullcalendar/resource-timeline": "^6.1.18",
         "@fullcalendar/rrule": "^6.1.18",
         "@fullcalendar/timegrid": "^6.1.18",
@@ -89,5 +89,12 @@
         "rrule": "^2.8.1",
         "tsdav": "^2.1.5",
         "zod": "^3.25.76"
+    },
+    "overrides": {
+        "minimatch": "^10.2.1",
+        "react-inspector": {
+            "react": "$react",
+            "react-dom": "$react-dom"
+        }
     }
 }
