updated docs; version bump

--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -17,7 +17,7 @@ body:
           label: "Please check that this issue hasn't been reported before."
           description: "The **Label filters** may help make your search more focussed."
           options:
-              - label: "I searched previous [Bug Reports](https://github.com/davish/obsidian-full-calendar/issues?q=is%3Aissue+is%3Aopen+label%3Abug) and didn't find any similar reports."
+              - label: "I searched previous [Bug Reports](https://github.com/YouFoundJK/plugin-full-calendar/issues?q=state%3Aopen%20label%3Abug) and didn't find any similar reports."
                 required: true
 
     - type: textarea
